--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ crate-type = ["cdylib"]
 skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
 skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
 smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
-smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
+#smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
+smashline = { git = "https://github.com/HDR-Development/smashline" }
 smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
 arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api"}
 lazy_static = "1.4.0"
